<resources>
    <string name="app_name">pawLife</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="user">User</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signIn">Sign In</string>
    <string name="checkAcc">Do not have account yet?</string>
    <string name="signUp">Sign Up</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="default_web_client_id">YOUR_WEB_CLIENT_ID.apps.googleusercontent.com</string>

    <!-- Navigation drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Navigation header -->
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string-array name="filter_distance">
        <item>All</item>
        <item>≤ 5 km</item>
        <item>≤ 10 km</item>
        <item>≤ 20 km</item>
        <item>&gt; 20 km</item>
    </string-array>

    <string-array name="filter_status">
        <item>All</item>
        <item>Open Now</item>
    </string-array>

    <string-array name="filter_rating">
        <item>All</item>
        <item>≥ 4.5</item>
        <item>≥ 4.0</item>
        <item>≥ 3.5</item>
    </string-array>

    <string-array name="pet_types">
        <item>Cat</item>
        <item>Dog</item>
    </string-array>

    <!-- Gender Array -->
    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <!-- Pet Type Array -->
    <string-array name="pet_type_array">
        <item>Dog</item>
        <item>Cat</item>
    </string-array>

</resources>